--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 
 header {
   color: #fff;
-  background-color: #103D5D;
+  background-color: rgb(12, 104, 12);
   padding: 33px 0 25px 15px;
 }
 
@@ -43,7 +43,7 @@ header i {
 
 .add-item {
   border-radius: 2px;
-  border-top: 3px solid #103D5D;
+  border-top: 3px solid rgb(12, 104, 12);
   margin-right: 50px;
   background-color: rgb(237, 237, 237);
   padding: 60px 18px;
@@ -104,7 +104,7 @@ h2 {
 }
 
 li h3 {
-  background-color: #103D5D;
+  background-color: rgb(12, 104, 12);
   margin: 0;
   color: #fff;
   font-weight: 300;
@@ -118,17 +118,24 @@ li p {
 form button {
   width: 100%;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 button {
-  border-radius: 2px;
+  border-radius: 5px;
   min-width: 88px;
-  background-color: #FA6900;
+  background-color: rgba(91, 160, 84, 0.808);
   cursor: pointer;
-  border: 0;
+  border: 0px;
   min-width: 120px;
-  color: #fff;
+  color: rgb(255, 255, 255);
   font-size: 14px;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+  box-shadow: 0 2px 5px 0 rgba(25, 27, 27, 0.863);
   padding: 10px 6px;
+}
+
+
+button:hover {
+  /* border-color: rgb(214, 243, 84); */
+  border: 2px solid #e3f02b;
 }
